# QbitLite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/src/: Qbit.h  qbpch.h
Engine/src/Platform/Windows/: WindowsPlatformUtils.cpp
Engine/src/Qbit/Core/: Application.cpp  Application.h  Window.cpp
Engine/src/Qbit/ImGui/: ImGuiLayer.cpp
Engine/src/Qbit/Renderer/: EditorCamera.cpp  Renderer2D.cpp  Renderer2D.h
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/src/: Sandbox2D.cpp
Scripts/: ClearBuild.bat  CreateSolution.bat  CreateSolution.sh  Setup.bat  Setup.sh
